fix: terminal paddings when instructions pane visible

--- a/src/client/style.css
+++ b/src/client/style.css
@@ -370,7 +370,7 @@ body {
 }
 
 .terminal-wrapper.instructions-visible {
-  padding: 1px;
+  padding: 8px;
 }
 
 .instructions-pane .username-highlight {
